<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/book_with_headphones" />

    <TextView
        android:id="@+id/now_playing"
        style="@style/PlaylistStyle"
        android:background="@color/colorNowPlaying"
        android:text="@string/now_playing" />

    <TextView
        style="@style/HeaderStyle"
        android:text="@string/playlists" />

    <TextView
        android:id="@+id/eve"
        style="@style/PlaylistStyle"
        android:background="@color/colorEveDallas"
        android:text="@string/Eve" />

    <TextView
        android:id="@+id/dune"
        style="@style/PlaylistStyle"
        android:background="@color/colorDune"
        android:text="@string/Dune" />

    <TextView
        android:id="@+id/other"
        style="@style/PlaylistStyle"
        android:background="@color/colorOther"
        android:text="@string/Other" />

</LinearLayout>